--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
               It is...
             </h2>
             <p class="sunny">Sunny! Don't forget your sunscreen. ☀️</p>
+            <h2 class="its" id="weather-description">
+            Precipitation:
+            <span id="humidity">
+              test lol
+            </span>
+            <br />
+          Wind:
+          <span id="wind">
+              test lol
+            </span>
           </div>
         </div>
         <div class="col-2">
